--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.21",
     "d3-geo": "^3.1.1",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.263.1",
     "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
@@ -22,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.8.2",
     "react-simple-maps": "^3.0.0",
     "react-tooltip": "^5.29.1",
