--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/vite": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "d3-geo": "^3.1.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.263.1",
